@@ -1,6 +1,9 @@
                                                          -*- coding: utf-8 -*-
 Changes with Apache 2.5.0
 
+  *) mod_proxy: Reject invalid values for Max-Forwards. [Graham Leggett,
+     Co-Advisor <coad measurement-factory.com>]
+
   *) mod_cache: If a 304 response indicates an entity not currently cached, then
      the cache MUST disregard the response and repeat the request without the
      conditional. [Graham Leggett, Co-Advisor <coad measurement-factory.com>]
